2016-10-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/verilog/Execute.v: Rename included header to aap.vh.
	* src/verilog/Fetch.v: Likewise.
	* src/verilog/Makefile: Remove Verilog model creation to separate dir.
	* src/verilog/Memory.v: Rename included header to aap.vh.
	* src/verilog/MemorySmall.v: Likewise.
	* src/verilog/MyStorm.v: Likewise.
	* src/verilog/RegisterFile.v: Likewise.
	* src/verilog/aap-main.cpp: Deleted.
	* src/verilog/aap.vh: Renamed from aap.h

2016-10-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Created.
	* ChangeLog: Created.
	* README.md: Updated for MyStorm variant.
	* src/verilog/.gitignore: Created.
	* src/verilog/Debug.v: Created.
	* src/verilog/Execute.v: Created.
	* src/verilog/Fetch.v: Created.
	* src/verilog/Makefile: Created.
	* src/verilog/Memory.v: Created.
	* src/verilog/MemorySmall.v: Created.
	* src/verilog/MyStorm.v: Created.
	* src/verilog/RegisterFile.v: Created.
	* src/verilog/UartRx.v: Created.
	* src/verilog/UartTx.v: Created.
	* src/verilog/aap-main.cpp: Created.
	* src/verilog/aap.h: Created.
	* src/verilog/aap.pcf: Created.