@@ -1,3 +1,8 @@
+2016-12-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* src/verilog/Makefile: Restructured and and verilator model target.
+	* src/verilog/aap-main.cpp: Created.
+
 2016-10-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* src/verilog/Execute.v: Rename included header to aap.vh.
